#70 completed eth1 api endpoint docs
